# wukong-stack

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
tests/: test_template_utils.py
wukong/: add.py  backend_generator.py  cli.py  code.py  code_review.py  codegen.py  coder.py  crud_api_generator.py  crud_generator.py  crud_vue_generator.py  database.py  docker-compose.yml  frontend_generator.py  init.py  jinja2_template_render.py  llmclient.py  oauth2.py  project_init.py  shell.py  source_code_utils.py  template_utils.py  utils.py  version.py  wukong_config.py
wukong/agentic/pgsql/: commands.py  pg_agent_shell.py  pg_client.py  pg_prompts.py  prompt_builder.py  sql_execution_agent.py  supervisor_agent.py  text_to_sql_agent.py
wukong/commands/: cli_utils.py  flask_crud.py  flask_project_init.py  jinja2_template_render.py  template_utils.py
wukong/commands/samples/: app.py.txt
wukong/commands/templates/backend/: api_resource.py.j2  dao.py.j2  model.py.j2  router.py.j2  schema.py.j2
wukong/llm/: function_tools.py  history_manager.py  llm_client.py  llm_tools_client.py  utils.py
wukong/prompts/: __init__.py
wukong/templates/backend/: .env.example.j2  config.py.j2  crud.py.j2  database.py.j2  main.py.j2  model.py.j2  router.py.j2  schema.py.j2  test_router.py.j2
wukong/unittest/: commands.py
wukong/utils/: __init__.py  json_utils.py
