[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wukong-stack"
version = "0.1.3"
description = "WukongStack is a dynamic CLI tool that generates a full-stack web application skeleton"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sunny Liu", email = "sunnyliu2@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: web application",
    "Topic :: developer tools",
]
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "sqlalchemy==2.0.41",
    "python-dotenv==1.1.1",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.5.0",
    "pytest==8.4.1",
    "tomlkit==0.13.3",
    "semver==3.0.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"wukong" = ["**/*"]

[project.scripts]
wukong = "wukong.cli:cli"

[project.urls]
Homepage = "https://github.com/devsunny/wukong-stack"
Documentation = "https://github.com/devsunny/wukong-stack/README.md"
Repository = "https://github.com/devsunny/wukong-stack"